# 3D-Ocean

./: .gitignore  README.md  down.py  main.py  pyproject.toml
.cursor/rules/: sst.mdc
documents/: Deep Learning Tuning Playbook 中文版.md
research/: log.py  model.py  plot.py  util.py
research/config/: params.py
src/: 3D.ipynb  EI-NA.ipynb  analyze.ipynb  convLSTM.ipynb  lstm.ipynb  lstm_trainer.ipynb  main.ipynb  main.py  rdf.ipynb  rf.ipynb  test.ipynb  train.ipynb  unet.ipynb
src/analysis/: SH.py  prediction.py  rmse.py  season.py  training.py
src/analysis/report/: analysis_report.md
src/config/: area.py  constants.py  params.py
src/config/ne_10m_bathymetry_all/: ne_10m_bathymetry_G_4000.README.html
src/dataset/: Argo.py  ERA5.py
src/docs/: IMPROVEMENTS.md  OPTIMIZATION_USAGE_EXAMPLE.md  PERFORMANCE_ANALYSIS.md
src/main/: README.md  predict.py
src/models/: ConvLSTM.py  LSTM.py  MCSTNet.py  RATransformer.py  RDF.py  Transformer.py  UNet.py  UNetLSTM.py  error curve.py  model.py  tree.py
src/models/Attention/: RGAttention.py
src/models/PE/: SphericalHarmonicEncoding.py
src/plot/: base.py  mask.py  mld.py  profile.py  sst.py
src/trainer/: base.py  lstm.py  lstm_for_month.ipynb  rf.py  rf_trainer.ipynb  transformer.py  unet.py
src/utils/: dataset.py  depth_interpolator.py  log.py  mio.py  mld.py  plot.py  util.py
test/: Model3predict.py  model.keras  model2.py  util_test.py
web/: callbacks.py  dashboard.py  main.py
web/components/: Actions.py  Inputs.py  ModelInspector.py  ParamsInspector.py  TaskMonitor.py
web/tasks/: TrainerTask.py
(+10 files in other folders)
